crates/snapshot-tests/tests/snapshots/parser__newline_string.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated basic string, expected `"` at `a`
  ┌─ newline_string:1:6
  │
1 │ a = "
  │      ^ expected `"`


error: unterminated basic string, expected `"` at `a`
 --> newline_string:1:6
  |
1 | a = "
  |      ^ expected `"`
Error {
    kind: "UnterminatedString",
    message: "unterminated basic string, expected `\"`",
    span: 5..5,
    path: Some(
        "a",
    ),
}
